mocha tdd setting

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<div id="app">test</div>
+<div id="app"><a href="/shop/" id="goToEventPage" onClick="goToMobile()">click</a></div>
 </body>
 </html>
