--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<div id="app"><button type="button" id="toggleBtn"></button></div>
+<div id="app"><button type="button" id="toggleBtn" onclick="layerPopup.addClass()">click</button></div>
 </body>
 </html>
